{idk what i wrote}

--- a/index.html
+++ b/index.html
@@ -14,55 +14,61 @@
 
     </header>
     <main>
-        <div class="header_first">
-            <div class="black-head"><img src="images/menu.png" alt=""></div>
-            <div class="main_first">
-                <p>Пройдите точный и быстрый </p>
-                <h1>ТЕСТ НА ОПРЕДЕЛЕНИЕ IQ</h1>
-                <button>ПРОЙТИ ТЕСТ</button>
-                <p class="half-color-text">
-                    <span class="first-half">И получите рекомендации по развитию своего интеллекта и</span>
-                    <span class="second-half"> улучшению финансового благосостояния и личной жизни</span>
-                </p>
-                <div class="svg-item">
-                    <img src="images/Group 3.svg" alt="">
-                    <p>Подробнее</p>
-                </div>
+        <main>
+            <main>
+                <div class="header_first">
+                    <div class="black-head"><img src="images/menu.png" alt=""></div>
+                    <div class="main_first">
+                        <p>Пройдите точный и быстрый </p>
+                        <h1>ТЕСТ НА ОПРЕДЕЛЕНИЕ IQ</h1>
+                        <button>ПРОЙТИ ТЕСТ</button>
+                        <p class="half-color-text">
+                            <span class="first-half">И получите рекомендации по развитию своего интеллекта и</span>
+                            <span class="second-half"> улучшению финансового благосостояния и личной жизни</span>
+                        </p>
+                        <div class="svg-item">
+                            <img src="images/Group 3.svg" alt="">
+                            <p>Подробнее</p>
+                        </div>
 
-            </div>
-            <div class="main-second">
-                <p> " Профессиональный <br> IQ-тест позволяет не <br> только определить <br> коэффициент вашего <br>
-                    интеллекта, <br>
-                    но и выработать список <br> рекомендаций для <br> повышения этого <br> показателя. "</p>
-            </div>
-            <div class="main_third">
-                <p>Также по результатам теста <br>
-                    <span>вы получите</span> подробные <br> <span>советы</span> по определению наиболее <br>
-                    перспективной <span>для вашего <br> типа
-                        интеллекта сферы <br></span>
-                    деятельности, <br>
-                    которая принесет вам скорейший <br> финансовый результат.
-                </p>
-                <img src="images/325-01.png" alt="">
-                <button>ПРОЙТИ ТЕСТ</button>
-            </div>
-            <div class="main_fourth">
-                <p>Прохождение теста займет у <br> вас не более <span>12 минут</span> , а его <br> результаты вы сможете
-                    <br>
-                    <span>использовать всю жизнь.</span>
-                </p>
-                <div>
-                    <p>Профессиональная <br> интерпретация и детально <br> проработанные <br> рекомендации позволят вам
-                        <br> качественно
-                        изменить все <br> аспекты своей
-                        жизни: от <br> финансового до любовного.
-                    </p>
-                </div>
-                <button>Пройти тест</button>
+                    </div>
+                    <div class="main-second">
+                        <p> " Профессиональный <br> IQ-тест позволяет не <br> только определить <br> коэффициент вашего
+                            <br>
+                            интеллекта, <br>
+                            но и выработать список <br> рекомендаций для <br> повышения этого <br> показателя. "
+                        </p>
+                    </div>
+                    <div class="main_third">
+                        <p>Также по результатам теста <br>
+                            <span>вы получите</span> подробные <br> <span>советы</span> по определению наиболее <br>
+                            перспективной <span>для вашего <br> типа
+                                интеллекта сферы <br></span>
+                            деятельности, <br>
+                            которая принесет вам скорейший <br> финансовый результат.
+                        </p>
+                        <img src="images/325-01.png" alt="">
+                        <button>ПРОЙТИ ТЕСТ</button>
+                    </div>
+                    <div class="main_fourth">
+                        <p>Прохождение теста займет у <br> вас не более <span>12 минут</span> , а его <br> результаты вы
+                            сможете
+                            <br>
+                            <span>использовать всю жизнь. хотя</span>
+                        </p>
+                        <div>
+                            <p>Профессиональная <br> интерпретация и детально <br> проработанные <br> рекомендации
+                                позволят вам
+                                <br> качественно
+                                изменить все <br> аспекты своей
+                                жизни: от <br> финансового до любовного.
+                            </p>
+                        </div>
+                        <button>Пройти тест после гит and also </button>
 
-            </div>
-        </div>
-    </main>
+                    </div>
+                </div>
+            </main>
 </body>
 
 </html>
